# dev.funda.collections-linked.list

./: .gitignore  .replit  CMakeLists.txt  README.md  replit.nix
docs/: README.md
include/: Menu.h  Node.h  README.md
src/: Menu.cpp  Node.cpp  README.md  main.cpp
